CWNew/force-app/main/default/objects/CW_Trip__c/CW_Trip__c.object-meta.xml
<CustomObject>
    <label>Trip</label>
    <nameField>
        <displayFormat>T-{MM}-{DD}-{YYYY}-{0}</displayFormat>
        <label>Triip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>