CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Arrival__c.field-meta.xml
<CustomField>
    <fullName>CW_Arrival__c</fullName>
    <description>Stores arrival time</description>
    <label>Arrival</label>
    <type>DateTime</type>
</CustomField>