CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Departure__c.field-meta.xml
<CustomField>
    <fullName>CW_Departure__c</fullName>
    <description>Stores departure date and time</description>
    <label>Departure</label>
    <type>DateTime</type>
</CustomField>