CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Is_Booking_Closed__c.field-meta.xml
<CustomField>
    <fullName>CW_Is_Booking_Closed__c</fullName>
    <formula>CW_Departure__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Booking Closed</label>
    <type>Checkbox</type>
</CustomField>