CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Is_Seats_Available__c.field-meta.xml
<CustomField>
    <fullName>CW_Is_Seats_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Seats Available</label>
    <type>Checkbox</type>
</CustomField>