CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Layout_JSON__c.field-meta.xml
<CustomField>
    <fullName>CW_Layout_JSON__c</fullName>
    <label>Layout JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>