CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Price__c.field-meta.xml
<CustomField>
    <fullName>CW_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>