CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Route__c.field-meta.xml
<CustomField>
    <fullName>CW_Route__c</fullName>
    <label>Route</label>
    <referenceTo>CW_Route__c</referenceTo>
    <relationshipLabel>Trips</relationshipLabel>
    <relationshipName>Trips</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>