CWNew/force-app/main/default/objects/CW_Trip__c/fields/CW_Travel_Date__c.field-meta.xml
<CustomField>
    <fullName>CW_Travel_Date__c</fullName>
    <formula>DATEVALUE( CW_Departure__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Travel Date</label>
    <type>Date</type>
</CustomField>