CWNew/force-app/main/default/objects/CW_Trip__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CW_Route__c</columns>
    <columns>CW_Departure__c</columns>
    <columns>CW_Arrival__c</columns>
    <columns>CW_Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>